[gd_scene load_steps=6 format=3 uid="uid://da5g6s70kykj7"]

[ext_resource type="Texture2D" uid="uid://jgc4mks6l2nl" path="res://Art/pesky creatures.png" id="1_6f28l"]
[ext_resource type="Script" path="res://Scenes/Critters/creature.gd" id="1_7jhva"]

[sub_resource type="Animation" id="Animation_hwc5u"]
resource_name = "get_kicked"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_wxpyn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_narnv"]
_data = {
"RESET": SubResource("Animation_wxpyn"),
"get_kicked": SubResource("Animation_hwc5u")
}

[node name="Creature" type="AnimatableBody2D"]
script = ExtResource("1_7jhva")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6f28l")
hframes = 3
vframes = 4

[node name="Node" type="Node" parent="."]

[node name="FirstStrikeTimer" type="Timer" parent="Node"]
wait_time = 0.3
one_shot = true

[node name="HitTimer" type="Timer" parent="Node"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_narnv")
}

[connection signal="timeout" from="Node/FirstStrikeTimer" to="." method="_on_first_strike_timer_timeout"]
[connection signal="timeout" from="Node/HitTimer" to="." method="_on_hit_timer_timeout"]
